--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,10 @@ asgiref==3.5.2
 certifi==2022.9.24
 charset-normalizer==2.1.1
 click==8.1.3
-Django==4.1.3
 et-xmlfile==1.1.0
 Flask==2.2.2
 greenlet==2.0.1
+gunicorn==20.1.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
