--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,16 @@
-asgiref==3.5.2
-certifi==2022.9.24
-charset-normalizer==2.1.1
 click==8.1.3
-et-xmlfile==1.1.0
-Flask==2.2.2
-greenlet==2.0.1
-gunicorn==20.1.0
-idna==3.4
+Flask==2.2.3
+Flask-Injector==0.14.0
+greenlet==2.0.2
+injector==0.20.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
-MarkupSafe==2.1.1
-numpy==1.23.5
-openpyxl==3.0.10
-pandas==1.5.2
+MarkupSafe==2.1.2
+numpy==1.24.2
+pandas==1.5.3
 python-dateutil==2.8.2
-pytz==2022.6
-requests==2.28.1
+pytz==2022.7.1
 six==1.16.0
-SQLAlchemy==1.4.44
-sqlparse==0.4.3
-urllib3==1.26.13
-Werkzeug==2.2.2
+SQLAlchemy==2.0.6
+typing_extensions==4.5.0
+Werkzeug==2.2.3
